...
                        hintText: 'Enter your password'),
                  ),
                  SizedBox(
                    height: 24.0,
                  ),
                  SizedBox(
                    key: Key('LogIn'),
                    child: RoundedButton(
                      title: 'Log In',
                      colour: Color(0xFF363636),
                      onPressed: () {
                        if (_formKey.currentState!.validate()) {
                          User user = User(
...
